fix cmake error for installing header files.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,7 @@ set(HPP_FILES
 
 rock_library(uw_localization
     SOURCES ${CPP_FILES}
-    HEADERS ${H_FILES}
+    HEADERS ${HPP_FILES}
     DEPS_PKGCONFIG base-types
     DEPS_PKGCONFIG yaml-cpp
     DEPS_PKGCONFIG machine_learning)
