add map files to CMakeLists.txt.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,16 @@
 set(CPP_FILES
     math/geometry.cpp
     filters/particle_filter.cpp
+    maps/map.cpp
+    maps/stochastic_map.cpp
     )
 
 set(HPP_FILES
     math/geometry.hpp
     filters/particle_filter.hpp
     types/particle.hpp
+    maps/map.hpp
+    maps/stochastic_map.hpp
     )
 
 rock_library(uw_localization
