add new environment type for better visualization. add MonitorVisualization for particle localization.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set(HPP_FILES
     filters/particle_filter.hpp
     types/particle.hpp
     types/map.hpp
+    types/environment.hpp
     maps/map.hpp
     maps/node_map.hpp
     )
