--- a/viz/CMakeLists.txt
+++ b/viz/CMakeLists.txt
@@ -22,11 +22,16 @@ rock_vizkit_plugin(uw_localization_mapfeature-viz
    MOC MapFeatureVisualization.hpp
    HEADERS MapFeatureVisualization.hpp)
 
+rock_library(uw_localization_viz
+    SOURCES ParticleGeode.cpp
+    HEADERS ParticleGeode.hpp
+    DEPS_PKGCONFIG vizkit)
+
 rock_vizkit_plugin(uw_localization_monitor-viz
     MonitorVisualization.cpp
-    DEPS uw_localization
+    DEPS uw_localization uw_localization_viz
     MOC MonitorVisualization.hpp
-    HEADERS MonitorVisualization.hpp)
+    HEADERS MonitorVisualization.hpp ParticleGeode.hpp)
 
 
 
