update some vizkit visualizations.

--- a/viz/CMakeLists.txt
+++ b/viz/CMakeLists.txt
@@ -1,9 +1,3 @@
-rock_vizkit_plugin(uw_localization_particle-viz
-    ParticleVisualization.cpp
-    DEPS uw_localization
-    MOC ParticleVisualization.hpp
-    HEADERS ParticleVisualization.hpp)
-
 rock_vizkit_plugin(uw_localization_laserscan-viz
    LaserScanVisualization.cpp
    DEPS uw_localization
@@ -26,6 +20,24 @@ rock_vizkit_plugin(uw_localization_monitor-viz
     DEPS uw_localization uw_localization_viz
     MOC MonitorVisualization.hpp
     HEADERS MonitorVisualization.hpp ParticleGeode.hpp)
+
+rock_vizkit_plugin(uw_localization_particle-viz
+    ParticleVisualization.cpp
+    DEPS uw_localization uw_localization_viz
+    MOC ParticleVisualization.hpp
+    HEADERS ParticleVisualization.hpp ParticleGeode.hpp)
+
+rock_vizkit_plugin(uw_localization_sonarpoint-viz
+    SonarPointVisualization.cpp
+    DEPS uw_localization uw_localization_viz
+    MOC SonarPointVisualization.hpp
+    HEADERS SonarPointVisualization.hpp ParticleGeode.hpp)
+
+rock_vizkit_plugin(uw_localization_map-viz
+   MapVisualization.cpp
+   DEPS uw_localization
+   MOC MapVisualization.hpp
+   HEADERS MapVisualization.hpp)
 
 
 
